tests/baselines/reference/noImplicitAnyNamelessParameter.errors.txt
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(2,17): error TS7051: Parameter has a name but no type. Did you mean 'arg: string'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(2,25): error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(3,19): error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(3,22): error TS7051: Parameter has a name but no type. Did you mean 'arg: number'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(4,20): error TS7051: Parameter has a name but no type. Did you mean 'arg: boolean'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(4,29): error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(4,32): error TS7051: Parameter has a name but no type. Did you mean 'arg: object'?
tests/cases/compiler/noImplicitAnyNamelessParameter.ts(4,40): error TS7051: Parameter has a name but no type. Did you mean 'arg: undefined'?


==== tests/cases/compiler/noImplicitAnyNamelessParameter.ts (8 errors) ====
    class C { }
    declare var x: (string, C) => void;
                    ~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: string'?
                            ~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
    declare var y: { (C, number): void };
                      ~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
                         ~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: number'?
    declare var z: { m(boolean, C, object, undefined): void }
                       ~~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: boolean'?
                                ~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: C'?
                                   ~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: object'?
                                           ~~~~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg: undefined'?
    // note: null and void do not parse correctly without a preceding parameter name
    